--- a/3d/earrings.html
+++ b/3d/earrings.html
@@ -131,6 +131,7 @@
       transition: all 1s;
     }
 
+
     .columns a.btn-blue-outline:hover {
       color: var(--white);
       background-color: var(--black);
@@ -142,9 +143,8 @@
       background-color: var(--companyblue);
     }
 
-    .studs-nav .btn {
-      display: inline-block;
-    }
+
+
 
     .large-btn {
       width: 347px;
@@ -318,161 +318,6 @@
       align-items: flex-start;
     }
 
-    @media (max-width: 1199.98px) {
-
-      .diamond-image img {
-        width: 320px;
-      }
-
-      .spinning-diamond {
-        width: 380px;
-        height: 380px;
-      }
-
-      .diamond-quality,
-      .diamond-price {
-        font-size: 12px;
-      }
-
-    }
-
-
-    @media (max-width: 767.98px) {
-
-      .py-xs-5 {
-        padding-top: 3rem;
-        padding-bottom: 3rem;
-      }
-
-      .d-sm-flex {
-        display: block;
-      }
-
-      .w-sm-50 {
-        width: 100%;
-      }
-
-      .mx-xs-3 {
-        margin: auto 15px !important;
-      }
-
-      .m-xs-auto {
-        margin: auto !important;
-      }
-
-      .pt-xs-3 {
-        padding-top: 1rem !important;
-      }
-
-      .spacing-xs-t {
-        padding-top: 20px !important;
-      }
-
-      .spacing-xs-b {
-        padding-bottom: 20px !important;
-      }
-
-      .pb-sm-5 {
-        padding-bottom: 0 !important;
-      }
-
-      .pb-xs-5 {
-        padding-bottom: 3rem !important;
-      }
-
-      .py-xs-5 {
-        padding-top: 3rem !important;
-        padding-bottom: 3rem !important;
-      }
-
-      .col-sm-12 {
-        padding-left: 13px;
-        padding-right: 13px;
-      }
-
-      .mt2021 .btn {
-        font-size: 14px;
-        line-height: 22px;
-
-      }
-
-      .my-4 {
-        margin-top: 1.2rem !important;
-      }
-
-      .mt2021 .row {
-        display: block;
-      }
-
-      .diamond-image img {
-        width: 320px;
-      }
-
-      .perfect-fit-bg {
-        background: linear-gradient(175.67deg, #F5F5F5 -9.43%, #C4C4C4 -9.42%, rgba(205, 205, 205, 0) 95.82%);
-      }
-
-
-    }
-
-
-    @media (max-width: 480px) {
-
-
-      .mt2021 .btn {
-        font-size: 14px;
-        line-height: 15px;
-        /* height: 30px; */
-      }
-
-      .large-btn {
-        width: 217px;
-      }
-
-      .diamond-image img {
-        width: 80%;
-      }
-
-      #diamonds-slider.owl-carousel .owl-item {
-        height: 200px;
-      }
-
-      .mt2021 .owl-carousel .owl-item img {
-        width: 70px;
-        transition: unset;
-      }
-
-      .mt2021 .owl-carousel .owl-item.center img {
-        width: 150px;
-      }
-
-      .mt2021 .owl-carousel .owl-item.center {
-        margin: 0px 20px;
-      }
-
-      .spinning-diamond {
-        width: 295px;
-        height: 295px;
-      }
-
-      .diamond-thumbnail .diamond-size {
-        font-size: 11px;
-      }
-
-      .diamond-quality,
-      .diamond-price {
-        font-size: 12px;
-      }
-
-      .desktop-show {
-        display: none;
-      }
-
-      .mobile-show {
-        display: block;
-      }
-
-    }
 
 
 
@@ -807,53 +652,196 @@
       background-position-x: center;
       background-position-y: center;
     }
+
+    .studs-nav .btn {
+      display: inline-block;
+    }
+
+    .studs-nav a.btn-blue-outline {
+      min-width: 162px;
+    }
+
+    @media (max-width: 1199.98px) {
+
+      .diamond-image img {
+        width: 320px;
+      }
+
+      .spinning-diamond {
+        width: 380px;
+        height: 380px;
+      }
+
+      .diamond-quality,
+      .diamond-price {
+        font-size: 12px;
+      }
+
+    }
+
+
+    @media (max-width: 767.98px) {
+
+      .py-xs-5 {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+      }
+
+      .d-sm-flex {
+        display: block;
+      }
+
+      .w-sm-50 {
+        width: 100%;
+      }
+
+      .mx-xs-3 {
+        margin: auto 15px !important;
+      }
+
+      .m-xs-auto {
+        margin: auto !important;
+      }
+
+      .pt-xs-3 {
+        padding-top: 1rem !important;
+      }
+
+      .spacing-xs-t {
+        padding-top: 20px !important;
+      }
+
+      .spacing-xs-b {
+        padding-bottom: 20px !important;
+      }
+
+      .pb-sm-5 {
+        padding-bottom: 0 !important;
+      }
+
+      .pb-xs-5 {
+        padding-bottom: 3rem !important;
+      }
+
+      .py-xs-5 {
+        padding-top: 3rem !important;
+        padding-bottom: 3rem !important;
+      }
+
+      .col-sm-12 {
+        padding-left: 13px;
+        padding-right: 13px;
+      }
+
+      .mt2021 .btn {
+        font-size: 14px;
+        line-height: 22px;
+
+      }
+
+      .my-4 {
+        margin-top: 1.2rem !important;
+      }
+
+      .mt2021 .row {
+        display: block;
+      }
+
+      .diamond-image img {
+        width: 320px;
+      }
+
+      .perfect-fit-bg {
+        background: linear-gradient(175.67deg, #F5F5F5 -9.43%, #C4C4C4 -9.42%, rgba(205, 205, 205, 0) 95.82%);
+      }
+
+
+    }
+
+
+    @media (max-width: 480px) {
+
+
+      .mt2021 .btn {
+        font-size: 14px;
+        line-height: 15px;
+        /* height: 30px; */
+      }
+
+      .large-btn {
+        width: 217px;
+      }
+
+      .diamond-image img {
+        width: 80%;
+      }
+
+      #diamonds-slider.owl-carousel .owl-item {
+        height: 200px;
+      }
+
+      .mt2021 .owl-carousel .owl-item img {
+        width: 70px;
+        transition: unset;
+      }
+
+      .mt2021 .owl-carousel .owl-item.center img {
+        width: 150px;
+      }
+
+      .mt2021 .owl-carousel .owl-item.center {
+        margin: 0px 20px;
+      }
+
+      .spinning-diamond {
+        width: 295px;
+        height: 295px;
+      }
+
+      .diamond-thumbnail .diamond-size {
+        font-size: 11px;
+      }
+
+      .diamond-quality,
+      .diamond-price {
+        font-size: 12px;
+      }
+
+      .desktop-show {
+        display: none;
+      }
+
+      .mobile-show {
+        display: block;
+      }
+
+    }
   </style>
 </head>
 
 <body>
   <div class="mt2021">
     <section>
-      <img src="https://www.michaeltrio.com/pub/media/0newpendant/Solitaire-earrings-banner.jpg" alt="" class="w-100">
+      <img src="https://www.michaeltrio.com/pub/media/0newpendant/02.jpg" alt="" class="w-100 hidden-xs">
+      <img src="https://www.michaeltrio.com/pub/media/0newpendant/05.jpg" alt="" class="w-100 visible-xs">
     </section>
-
-
-    <!-- <section class="earrings-banner py-5">
-
-      <div class="container ">
-
-        <div class="row text-center">
-          <div class="col-xs-24">
-            <h1>Diamond Earrrings </h1>
-            <h3>Solitaire studs </h3>
-            <p class="my-4 p-wrapper">
-              Our extraordinary earring selection makes the perfect gift for any occasion. All Solitaire
-              Diamond Studs are available in White Gold, Rose Gold, and Yellow Gold.
-            </p>
-          </div>
-        </div>
-
-      </div>
-
-
-    </section> -->
 
 
     <section class="py-3 ">
       <div class="container">
         <div class="row ">
           <div class="col-xs-24">
-            <!-- <h1 class="text-center">Diamond Solitaire Collection</h1>
-            <h3 class="text-center">by michael trio</h3> -->
+
             <div class="studs-nav ">
 
-              <a href="https://www.michaeltrio.com/jewellery/earrings/studs" class="btn btn-blue-outline active"
+              <a href="{{store url='jewellery/earrings/studs'}}" class="btn btn-blue-outline active"
                 role="button">Diamond Studs </a>
 
-              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline"
-                role="button">Diamond Pendants </a>
+              <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline" role="button">Diamond
+                Pendants </a>
 
-              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline "
-                role="button">Wedding Bands </a>
+              <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline " role="button">Wedding
+                Bands </a>
 
             </div>
           </div>
@@ -1123,7 +1111,7 @@
                 Start personalising your very own Solitaire Earrings by selecting your preferred setting and diamond.
               </p>
 
-              <a href="https://www.michaeltrio.com/contacts" class="btn btn-blue large-btn " role="button">Customise
+              <a href="{{store url='contacts'}}" class="btn btn-blue large-btn " role="button">Customise
                 Here
               </a>
             </div>
@@ -1142,7 +1130,7 @@
     var EGVS2021 = [
       {
         "SKU": "MDE0006-GVS025-14KW",
-        "URL": " https://www.michaeltrio.com/MDE0006-GVS025-14KW",
+        "URL": " {{store url='MDE0006-GVS025-14KW'}}",
         "Size": "0.25ctw",
         "Price": "SG$654",
         "ClassName": "ct025",
@@ -1150,7 +1138,7 @@
       },
       {
         "SKU": "MDE0006-GVS050-14KW",
-        "URL": " https://www.michaeltrio.com/MDE0006-GVS050-14KW",
+        "URL": " {{store url='MDE0006-GVS050-14KW'}}",
         "Size": "0.50ctw",
         "Price": "SG$1,289",
         "ClassName": "ct050",
@@ -1158,7 +1146,7 @@
       },
       {
         "SKU": "MDE0006-GVS075-14KW",
-        "URL": " https://www.michaeltrio.com/MDE0006-GVS075-14KW",
+        "URL": " {{store url='MDE0006-GVS075-14KW'}}",
         "Size": "0.75ctw",
         "Price": "SG$2,308",
         "ClassName": "ct075",
@@ -1166,7 +1154,7 @@
       },
       {
         "SKU": "MDE0006-GVS100-14KW",
-        "URL": " https://www.michaeltrio.com/MDE0006-GVS100-14KW",
+        "URL": " {{store url='MDE0006-GVS100-14KW'}}",
         "Size": "1.00ctw",
         "Price": "SG$3,654",
         "ClassName": "ct100",
@@ -1174,7 +1162,7 @@
       },
       {
         "SKU": "MDE0006-GVS125-14KW",
-        "URL": " https://www.michaeltrio.com/MDE0006-GVS125-14KW",
+        "URL": " {{store url='MDE0006-GVS125-14KW'}}",
         "Size": "1.25ctw",
         "Price": "SG$6,766",
         "ClassName": "ct125",
@@ -1182,7 +1170,7 @@
       },
       {
         "SKU": "MDE0006-GVS150-14KW",
-        "URL": " https://www.michaeltrio.com/MDE0006-GVS150-14KW",
+        "URL": " {{store url='MDE0006-GVS150-14KW'}}",
         "Size": "1.50ctw",
         "Price": "SG$7,794",
         "ClassName": "ct150",
@@ -1190,7 +1178,7 @@
       },
       {
         "SKU": "MDE0006-GVS200-14KW",
-        "URL": " https://www.michaeltrio.com/MDE0006-GVS200-14KW",
+        "URL": " {{store url='MDE0006-GVS200-14KW'}}",
         "Size": "2.00ctw",
         "Price": "SG$15,700",
         "ClassName": "ct200",
@@ -1198,7 +1186,7 @@
       }]
     var EISI2021 = [{
       "SKU": "MDE0006-ISI025-14KW",
-      "URL": " https://www.michaeltrio.com/MDE0006-ISI025-14KW",
+      "URL": " {{store url='MDE0006-ISI025-14KW'}}",
       "Size": "0.25ctw",
       "Price": "SG$439",
       "ClassName": "ct025",
@@ -1206,7 +1194,7 @@
     },
     {
       "SKU": "MDE0006-ISI050-14KW",
-      "URL": " https://www.michaeltrio.com/MDE0006-ISI050-14KW",
+      "URL": " {{store url='MDE0006-ISI050-14KW'}}",
       "Size": "0.50ctw",
       "Price": "SG$1,056",
       "ClassName": "ct050",
@@ -1214,7 +1202,7 @@
     },
     {
       "SKU": "MDE0006-ISI075-14KW",
-      "URL": " https://www.michaeltrio.com/MDE0006-ISI075-14KW",
+      "URL": " {{store url='MDE0006-ISI075-14KW'}}",
       "Size": "0.75ctw",
       "Price": "SG$2,009",
       "ClassName": "ct075",
@@ -1222,7 +1210,7 @@
     },
     {
       "SKU": "MDE0006-ISI100-14KW",
-      "URL": " https://www.michaeltrio.com/MDE0006-ISI100-14KW",
+      "URL": " {{store url='MDE0006-ISI100-14KW'}}",
       "Size": "1.00ctw",
       "Price": "SG$3,420",
       "ClassName": "ct100",
@@ -1230,7 +1218,7 @@
     },
     {
       "SKU": "MDE0006-ISI125-14KW",
-      "URL": " https://www.michaeltrio.com/MDE0006-ISI125-14KW",
+      "URL": " {{store url='MDE0006-ISI125-14KW'}}",
       "Size": "1.25ctw",
       "Price": "SG$4,327",
       "ClassName": "ct125",
@@ -1238,7 +1226,7 @@
     },
     {
       "SKU": "MDE0006-ISI150-14KW",
-      "URL": " https://www.michaeltrio.com/MDE0006-ISI150-14KW",
+      "URL": " {{store url='MDE0006-ISI150-14KW'}}",
       "Size": "1.50ctw",
       "Price": "SG$6,878",
       "ClassName": "ct150",
@@ -1246,7 +1234,7 @@
     },
     {
       "SKU": "MDE0006-ISI200-14KW",
-      "URL": " https://www.michaeltrio.com/MDE0006-ISI200-14KW",
+      "URL": " {{store url='MDE0006-ISI200-14KW'}}",
       "Size": "2.00ctw",
       "Price": "SG$12,897",
       "ClassName": "ct200",
@@ -1254,7 +1242,7 @@
     }]
     var EL2021 = [{
       "SKU": "MDE0006-L025-14KW",
-      "URL": " https://www.michaeltrio.com/mde0006-l025-14kw",
+      "URL": " {{store url='mde0006-l025-14kw'}}",
       "Size": "0.25ctw",
       "Price": "SG$392",
       "ClassName": "ct025",
@@ -1262,7 +1250,7 @@
     },
     {
       "SKU": "MDE0006-L050-14KW",
-      "URL": " https://www.michaeltrio.com/mde0006-l050-14kw",
+      "URL": " {{store url='mde0006-l050-14kw'}}",
       "Size": "0.50ctw",
       "Price": "SG$747",
       "ClassName": "ct050",
@@ -1270,7 +1258,7 @@
     },
     {
       "SKU": "MDE0006-L075-14KW",
-      "URL": " https://www.michaeltrio.com/mde0006-l075-14kw",
+      "URL": " {{store url='mde0006-l075-14kw'}}",
       "Size": "0.75ctw",
       "Price": "SG$1,215",
       "ClassName": "ct075",
@@ -1278,7 +1266,7 @@
     },
     {
       "SKU": "MDE0006-L100-14KW",
-      "URL": " https://www.michaeltrio.com/mde0006-l100-14kw",
+      "URL": " {{store url='mde0006-l100-14kw'}}",
       "Size": "1.00ctw",
       "Price": "SG$2,140",
       "ClassName": "ct100",
@@ -1286,7 +1274,7 @@
     },
     {
       "SKU": "MDE0006-L125-14KW",
-      "URL": " https://www.michaeltrio.com/mde0006-l125-14kw",
+      "URL": " {{store url='mde0006-l125-14kw'}}",
       "Size": "1.25ctw",
       "Price": "SG$2,803",
       "ClassName": "ct125",
@@ -1294,7 +1282,7 @@
     },
     {
       "SKU": "MDE0006-L150-14KW",
-      "URL": " https://www.michaeltrio.com/mde0006-l150-14kw",
+      "URL": " {{store url='mde0006-l150-14kw'}}",
       "Size": "1.50ctw",
       "Price": "SG$3,392",
       "ClassName": "ct150",
@@ -1302,7 +1290,7 @@
     },
     {
       "SKU": "MDE0006-L200-14KW",
-      "URL": " https://www.michaeltrio.com/mde0006-l200-14kw",
+      "URL": " {{store url='mde0006-l200-14kw'}}",
       "Size": "2.00ctw",
       "Price": "SG$6,261",
       "ClassName": "ct200",
@@ -1314,7 +1302,7 @@
 
     var EL2020 = [{
       "SKU": "mde0008-gvs025-18kw",
-      "URL": " https://www.michaeltrio.com/mde0008-gvs025-18kw",
+      "URL": " {{store url='mde0008-gvs025-18kw'}}",
       "Size": "0.25ctw",
       "Price": "SG$635",
       "ClassName": "ct025",
@@ -1322,7 +1310,7 @@
     },
     {
       "SKU": "mde0008-gvs060-18kw",
-      "URL": " https://www.michaeltrio.com/mde0008-gvs060-18kw",
+      "URL": " {{store url='mde0008-gvs060-18kw'}}",
       "Size": "0.60ctw",
       "Price": "SG$2,149",
       "ClassName": "ct060",
@@ -1330,7 +1318,7 @@
     },
     {
       "SKU": "mde0008-gvs080-18kw",
-      "URL": " https://www.michaeltrio.com/mde0008-gvs080-18kw",
+      "URL": " {{store url='mde0008-gvs080-18kw'}}",
       "Size": "0.80ctw",
       "Price": "SG$2,953",
       "ClassName": "ct080",
@@ -1338,7 +1326,7 @@
     },
     {
       "SKU": "mde0008-gvs100-18kw",
-      "URL": " https://www.michaeltrio.com/mde0008-gvs100-18kw",
+      "URL": " {{store url='mde0008-gvs100-18kw'}}",
       "Size": "1.00ctw",
       "Price": "SG$3,486",
       "ClassName": "ct100",
@@ -1346,7 +1334,7 @@
     }];
     var EGVS2020 = [{
       "SKU": "mde0006-gvs025-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-gvs025-18kw",
+      "URL": " {{store url='mde0006-gvs025-18kw'}}",
       "Size": "0.25ctw",
       "Price": "SG$622",
       "ClassName": "ct025",
@@ -1354,7 +1342,7 @@
     },
     {
       "SKU": "mde0006-gvs033-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-gvs033-18kw",
+      "URL": " {{store url='mde0006-gvs033-18kw'}}",
       "Size": "0.33ctw",
       "Price": "SG$1,214",
       "ClassName": "ct033",
@@ -1362,7 +1350,7 @@
     },
     {
       "SKU": "mde0006-gvs050-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-gvs050-18kw",
+      "URL": " {{store url='mde0006-gvs050-18kw'}}",
       "Size": "0.50ctw",
       "Price": "SG$1,494",
       "ClassName": "ct050",
@@ -1370,7 +1358,7 @@
     },
     {
       "SKU": "mde0006-gvs080-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-gvs080-18kw",
+      "URL": " {{store url='mde0006-gvs080-18kw'}}",
       "Size": "0.80ctw",
       "Price": "SG$2,710",
       "ClassName": "ct080",
@@ -1378,7 +1366,7 @@
     },
     {
       "SKU": "mde0006-gvs090-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-gvs090-18kw",
+      "URL": " {{store url='mde0006-gvs090-18kw'}}",
       "Size": "0.90ctw",
       "Price": "SG$2,981",
       "ClassName": "ct090",
@@ -1386,7 +1374,7 @@
     },
     {
       "SKU": "mde0006-gvs100-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-gvs100-18kw",
+      "URL": " {{store url='mde0006-gvs100-18kw'}}",
       "Size": "1.00ctw",
       "Price": "SG$4,914",
       "ClassName": "ct100",
@@ -1394,7 +1382,7 @@
     }];
     var EISI2020 = [{
       "SKU": "mde0006-isi025-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-isi025-18kw",
+      "URL": " {{store url='mde0006-isi025-18kw'}}",
       "Size": "0.25ctw",
       "Price": "SG$523",
       "ClassName": "ct025",
@@ -1402,7 +1390,7 @@
     },
     {
       "SKU": "mde0006-isi033-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-isi033-18kw",
+      "URL": " {{store url='mde0006-isi033-18kw'}}",
       "Size": "0.33ctw",
       "Price": "SG$850",
       "ClassName": "ct033",
@@ -1410,7 +1398,7 @@
     },
     {
       "SKU": "mde0006-isi050-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-isi050-18kw",
+      "URL": " {{store url='mde0006-isi050-18kw'}}",
       "Size": "0.50ctw",
       "Price": "SG$1,120",
       "ClassName": "ct050",
@@ -1418,7 +1406,7 @@
     },
     {
       "SKU": "mde0006-isi075-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-isi075-18kw",
+      "URL": " {{store url='mde0006-isi075-18kw'}}",
       "Size": "0.75ctw",
       "Price": "SG$2,112",
       "ClassName": "ct075",
@@ -1426,7 +1414,7 @@
     },
     {
       "SKU": "mde0006-isi080-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-isi080-18kw",
+      "URL": " {{store url='mde0006-isi080-18kw'}}",
       "Size": "0.80ctw",
       "Price": "SG$2,224",
       "ClassName": "ct100",
@@ -1434,7 +1422,7 @@
     },
     {
       "SKU": "mde0006-isi100-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-isi100-18kw",
+      "URL": " {{store url='mde0006-isi100-18kw'}}",
       "Size": "1.00ctw",
       "Price": "SG$3,158",
       "ClassName": "ct125",
@@ -1442,7 +1430,7 @@
     },
     {
       "SKU": "mde0006-isi150-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-isi150-18kw",
+      "URL": " {{store url='mde0006-isi150-18kw'}}",
       "Size": "1.50ctw",
       "Price": "SG$5,831",
       "ClassName": "ct150",
@@ -1450,7 +1438,7 @@
     },
     {
       "SKU": "mde0006-isi200-18kw",
-      "URL": " https://www.michaeltrio.com/mde0006-isi200-18kw",
+      "URL": " {{store url='mde0006-isi200-18kw'}}",
       "Size": "2.00ctw",
       "Price": "SG$11,775",
       "ClassName": "ct200",
