--- a/3d/pendant.html
+++ b/3d/pendant.html
@@ -131,6 +131,8 @@
       transition: all 1s;
     }
 
+
+
     .columns a.btn-blue-outline:hover {
       color: var(--white);
       background-color: var(--black);
@@ -142,9 +144,7 @@
       background-color: var(--companyblue);
     }
 
-    .studs-nav .btn {
-      display: inline-block;
-    }
+
 
     .large-btn {
       width: 347px;
@@ -318,161 +318,7 @@
       align-items: flex-start;
     }
 
-    @media (max-width: 1199.98px) {
 
-      .diamond-image img {
-        width: 320px;
-      }
-
-      .spinning-diamond {
-        width: 380px;
-        height: 380px;
-      }
-
-      .diamond-quality,
-      .diamond-price {
-        font-size: 12px;
-      }
-
-    }
-
-
-    @media (max-width: 767.98px) {
-
-      .py-xs-5 {
-        padding-top: 3rem;
-        padding-bottom: 3rem;
-      }
-
-      .d-sm-flex {
-        display: block;
-      }
-
-      .w-sm-50 {
-        width: 100%;
-      }
-
-      .mx-xs-3 {
-        margin: auto 15px !important;
-      }
-
-      .m-xs-auto {
-        margin: auto !important;
-      }
-
-      .pt-xs-3 {
-        padding-top: 1rem !important;
-      }
-
-      .spacing-xs-t {
-        padding-top: 20px !important;
-      }
-
-      .spacing-xs-b {
-        padding-bottom: 20px !important;
-      }
-
-      .pb-sm-5 {
-        padding-bottom: 0 !important;
-      }
-
-      .pb-xs-5 {
-        padding-bottom: 3rem !important;
-      }
-
-      .py-xs-5 {
-        padding-top: 3rem !important;
-        padding-bottom: 3rem !important;
-      }
-
-      .col-sm-12 {
-        padding-left: 13px;
-        padding-right: 13px;
-      }
-
-      .mt2021 .btn {
-        font-size: 14px;
-        line-height: 22px;
-
-      }
-
-      .my-4 {
-        margin-top: 1.2rem !important;
-      }
-
-      .mt2021 .row {
-        display: block;
-      }
-
-      .diamond-image img {
-        width: 320px;
-      }
-
-      .perfect-fit-bg {
-        background: linear-gradient(175.67deg, #F5F5F5 -9.43%, #C4C4C4 -9.42%, rgba(205, 205, 205, 0) 95.82%);
-      }
-
-
-    }
-
-
-    @media (max-width: 480px) {
-
-
-      .mt2021 .btn {
-        font-size: 14px;
-        line-height: 15px;
-        /* height: 30px; */
-      }
-
-      .large-btn {
-        width: 217px;
-      }
-
-      .diamond-image img {
-        width: 80%;
-      }
-
-      #diamonds-slider.owl-carousel .owl-item {
-        height: 200px;
-      }
-
-      .mt2021 .owl-carousel .owl-item img {
-        width: 70px;
-        transition: unset;
-      }
-
-      .mt2021 .owl-carousel .owl-item.center img {
-        width: 150px;
-      }
-
-      .mt2021 .owl-carousel .owl-item.center {
-        margin: 0px 20px;
-      }
-
-      .spinning-diamond {
-        width: 295px;
-        height: 295px;
-      }
-
-      .diamond-thumbnail .diamond-size {
-        font-size: 11px;
-      }
-
-      .diamond-quality,
-      .diamond-price {
-        font-size: 12px;
-      }
-
-      .desktop-show {
-        display: none;
-      }
-
-      .mobile-show {
-        display: block;
-      }
-
-    }
 
 
 
@@ -807,6 +653,170 @@
       background-position-x: center;
       background-position-y: center;
     }
+
+    .studs-nav .btn {
+      display: inline-block;
+    }
+
+    .studs-nav a.btn-blue-outline {
+      min-width: 162px;
+    }
+
+    @media (max-width: 1199.98px) {
+
+      .diamond-image img {
+        width: 320px;
+      }
+
+      .spinning-diamond {
+        width: 380px;
+        height: 380px;
+      }
+
+      .diamond-quality,
+      .diamond-price {
+        font-size: 12px;
+      }
+
+    }
+
+
+    @media (max-width: 767.98px) {
+
+      .py-xs-5 {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+      }
+
+      .d-sm-flex {
+        display: block;
+      }
+
+      .w-sm-50 {
+        width: 100%;
+      }
+
+      .mx-xs-3 {
+        margin: auto 15px !important;
+      }
+
+      .m-xs-auto {
+        margin: auto !important;
+      }
+
+      .pt-xs-3 {
+        padding-top: 1rem !important;
+      }
+
+      .spacing-xs-t {
+        padding-top: 20px !important;
+      }
+
+      .spacing-xs-b {
+        padding-bottom: 20px !important;
+      }
+
+      .pb-sm-5 {
+        padding-bottom: 0 !important;
+      }
+
+      .pb-xs-5 {
+        padding-bottom: 3rem !important;
+      }
+
+      .py-xs-5 {
+        padding-top: 3rem !important;
+        padding-bottom: 3rem !important;
+      }
+
+      .col-sm-12 {
+        padding-left: 13px;
+        padding-right: 13px;
+      }
+
+      .mt2021 .btn {
+        font-size: 14px;
+        line-height: 22px;
+
+      }
+
+      .my-4 {
+        margin-top: 1.2rem !important;
+      }
+
+      .mt2021 .row {
+        display: block;
+      }
+
+      .diamond-image img {
+        width: 320px;
+      }
+
+      .perfect-fit-bg {
+        background: linear-gradient(175.67deg, #F5F5F5 -9.43%, #C4C4C4 -9.42%, rgba(205, 205, 205, 0) 95.82%);
+      }
+
+
+    }
+
+
+    @media (max-width: 480px) {
+
+
+      .mt2021 .btn {
+        font-size: 14px;
+        line-height: 15px;
+        /* height: 30px; */
+      }
+
+      .large-btn {
+        width: 217px;
+      }
+
+      .diamond-image img {
+        width: 80%;
+      }
+
+      #diamonds-slider.owl-carousel .owl-item {
+        height: 200px;
+      }
+
+      .mt2021 .owl-carousel .owl-item img {
+        width: 70px;
+        transition: unset;
+      }
+
+      .mt2021 .owl-carousel .owl-item.center img {
+        width: 150px;
+      }
+
+      .mt2021 .owl-carousel .owl-item.center {
+        margin: 0px 20px;
+      }
+
+      .spinning-diamond {
+        width: 295px;
+        height: 295px;
+      }
+
+      .diamond-thumbnail .diamond-size {
+        font-size: 11px;
+      }
+
+      .diamond-quality,
+      .diamond-price {
+        font-size: 12px;
+      }
+
+      .desktop-show {
+        display: none;
+      }
+
+      .mobile-show {
+        display: block;
+      }
+
+    }
   </style>
 
 </head>
@@ -814,52 +824,30 @@
 <body>
   <div class="mt2021">
     <section>
-      <img src="https://www.michaeltrio.com/pub/media/0newpendant/Solitaire-pendant-banner.jpg" alt="" class="w-100">
+      <img src="https://www.michaeltrio.com/pub/media/0newpendant/03.jpg" alt="" class="w-100 hidden-xs">
+      <img src="https://www.michaeltrio.com/pub/media/0newpendant/06.jpg" alt="" class="w-100 visible-xs">
     </section>
 
     <section class="py-3">
       <div class="container">
         <div class="row ">
           <div class="col-xs-24">
-            <!-- <h1 class="text-center">Diamond Solitaire Collection</h1>
-            <h3 class="text-center">by michael trio</h3> -->
+
             <div class="studs-nav ">
 
-              <a href="https://www.michaeltrio.com/jewellery/earrings/studs" class="btn btn-blue-outline "
-                role="button">Diamond Studs </a>
+              <a href="{{store url='jewellery/earrings/studs'}}" class="btn btn-blue-outline " role="button">Diamond
+                Studs </a>
 
-              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline active"
+              <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline active"
                 role="button">Diamond Pendants </a>
-              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline "
-                role="button">Wedding Bands </a>
+              <a href="{{store url='jewellery/pendant/studs'}}" class="btn btn-blue-outline " role="button">Wedding
+                Bands </a>
 
             </div>
           </div>
         </div>
       </div>
     </section>
-
-
-
-    <!-- <section class="pandent-banner py-5">
-
-      <div class="container ">
-
-        <div class="row text-center">
-          <div class="col-xs-24">
-            <h1>Diamond Pendants </h1>
-            <p class="my-4 p-wrapper">
-              Our diamond necklaces are the perfect modern and statement piece for every wardrobe. All Solitaire Diamond
-              Necklaces are available in White Gold, Rose Gold, and Yellow Gold.
-            </p>
-          </div>
-        </div>
-
-      </div>
-
-
-    </section> -->
-
 
 
     <section class=" py-5">
@@ -955,7 +943,7 @@
               <h1>Customise Your Pendant</h1>
               <p class="my-4 p-wrapper">At Michael Trio, we provide customisation services for your ideal pendant. Start
                 personalising your very own Solitaire Pendant by selecting your preferred setting and diamond.</p>
-              <a href="https://www.michaeltrio.com/contacts" class="btn btn-blue large-btn " role="button">Customise
+              <a href="{{store url='contacts'}}" class="btn btn-blue large-btn " role="button">Customise
                 Here
               </a>
 
@@ -973,7 +961,7 @@
   <script>
     var PL2021 = [{
       "SKU": "MDP0001-L030-14KW",
-      "URL": "https://www.michaeltrio.com/mdp0001-l030-14kw",
+      "URL": "{{store url='mdp0001-l030-14kw'}}",
       "Size": "0.30ctw",
       "Price": "SG$635",
       "ClassName": "ct030",
@@ -981,7 +969,7 @@
     },
     {
       "SKU": "MDP0001-L050-14KW",
-      "URL": "https://www.michaeltrio.com/mdp0001-l050-14kw",
+      "URL": "{{store url='mdp0001-l050-14kw'}}",
       "Size": "0.50ctw",
       "Price": "SG$1,196",
       "ClassName": "ct050",
@@ -989,7 +977,7 @@
     },
     {
       "SKU": "MDP0001-L070-14KW",
-      "URL": "https://www.michaeltrio.com/mdp0001-l070-14kw",
+      "URL": "{{store url='mdp0001-l070-14kw'}}",
       "Size": "0.70ctw",
       "Price": "SG$2,056",
       "ClassName": "ct070",
@@ -997,7 +985,7 @@
     },
     {
       "SKU": "MDP0001-L100-14KW",
-      "URL": "https://www.michaeltrio.com/mdp0001-l100-14kw",
+      "URL": "{{store url='mdp0001-l100-14kw'}}",
       "Size": "1.00ctw",
       "Price": "SG$4,672",
       "ClassName": "ct100",
@@ -1005,7 +993,7 @@
     },
     {
       "SKU": "MDP0001-L150-14KW",
-      "URL": "https://www.michaeltrio.com/mdp0001-l150-14kw",
+      "URL": "{{store url='mdp0001-l150-14kw'}}",
       "Size": "1.50ctw",
       "Price": "SG$7,074",
       "ClassName": "ct150",
@@ -1013,7 +1001,7 @@
     }]
     var PISI2021 = [{
       "SKU": "MDP0001-ISI030-14KW",
-      "URL": "https://www.michaeltrio.com/MDP0001-ISI030-14KW",
+      "URL": "{{store url='MDP0001-ISI030-14KW'}}",
       "Size": "0.30ctw",
       "Price": "SG$785",
       "ClassName": "ct030",
@@ -1021,7 +1009,7 @@
     },
     {
       "SKU": "MDP0001-ISI050-14KW",
-      "URL": "https://www.michaeltrio.com/MDP0001-ISI050-14KW",
+      "URL": "{{store url='MDP0001-ISI050-14KW'}}",
       "Size": "0.50ctw",
       "Price": "SG$1,953",
       "ClassName": "ct050",
@@ -1029,7 +1017,7 @@
     },
     {
       "SKU": "MDP0001-ISI070-14KW",
-      "URL": "https://www.michaeltrio.com/MDP0001-ISI070-14KW",
+      "URL": "{{store url='MDP0001-ISI070-14KW'}}",
       "Size": "0.70ctw",
       "Price": "SG$3,887",
       "ClassName": "ct070",
@@ -1037,7 +1025,7 @@
     },
     {
       "SKU": "MDP0001-ISI100-14KW",
-      "URL": "https://www.michaeltrio.com/MDP0001-ISI100-14KW",
+      "URL": "{{store url='MDP0001-ISI100-14KW'}}",
       "Size": "1.00ctw",
       "Price": "SG$6,691",
       "ClassName": "ct100",
@@ -1045,7 +1033,7 @@
     }]
     var PGVS2021 = [{
       "SKU": "MDP0001-GVS030-14KW",
-      "URL": "https://www.michaeltrio.com/MDP0001-GVS030-14KW",
+      "URL": "{{store url='MDP0001-GVS030-14KW'}}",
       "Size": "0.30ctw",
       "Price": "SG$934",
       "ClassName": "ct030",
@@ -1053,7 +1041,7 @@
     },
     {
       "SKU": "MDP0001-GVS050-14KW",
-      "URL": "https://www.michaeltrio.com/MDP0001-GVS050-14KW",
+      "URL": "{{store url='MDP0001-GVS050-14KW'}}",
       "Size": "0.50ctw",
       "Price": "SG$2,532",
       "ClassName": "ct050",
@@ -1061,7 +1049,7 @@
     },
     {
       "SKU": "MDP0001-GVS070-14KW",
-      "URL": "https://www.michaeltrio.com/MDP0001-GVS070-14KW",
+      "URL": "{{store url='MDP0001-GVS070-14KW'}}",
       "Size": "0.70ctw",
       "Price": "SG$4,953",
       "ClassName": "ct070",
@@ -1069,7 +1057,7 @@
     },
     {
       "SKU": "MDP0001-GVS100-14KW",
-      "URL": "https://www.michaeltrio.com/MDP0001-GVS100-14KW",
+      "URL": "{{store url='MDP0001-GVS100-14KW'}}",
       "Size": "1.00ctw",
       "Price": "SG$11,196",
       "ClassName": "ct100",
