--- a/conflict-free.html
+++ b/conflict-free.html
@@ -227,7 +227,7 @@
                         source.
                     </p>
                 </div>
-                <h6><a href="https://www.michaeltrio.com/diamondproduct">SHOP CONFLICT-FREE DIAMONDS</a> </h6>
+                <h6><a href="{{store url='diamondproduct'}}">SHOP CONFLICT-FREE DIAMONDS</a> </h6>
             </div>
         </section>
     </div>
