--- a/content_pages/faq.html
+++ b/content_pages/faq.html
@@ -2409,7 +2409,7 @@
                                         <div class="panel-body">
                                             <p class="h9">
                                                 Order status and tracking information can be found on our website
-                                                <a href="https://www.michaeltrio.com/">here</a>
+                                                <a href="{{store url='/'}}">here</a>
                                                 .
                                             </p>
                                             <p class="h9">
@@ -2768,7 +2768,7 @@
                                                     refund/exchange
                                                     process.</p>
                                                 <p class="h9">View our showroom locations <a
-                                                        href="https://www.michaeltrio.com/locations">here</a>.</p>
+                                                        href="{{store url='locations'}}">here</a>.</p>
                                             </div>
                                             <div class="mb-5">
                                                 <h6>Mail it back to us.</h6>
@@ -2942,8 +2942,7 @@
                                                 We provide complimentary ring-sizers to help you determine your ring
                                                 size.
                                                 You may request a
-                                                ring-sizer <a
-                                                    href="https://www.michaeltrio.com/request-ring-sizer">here</a>. For
+                                                ring-sizer <a href="{{store url='request-ring-sizer'}}">here</a>. For
                                                 alternative ways to find your ring
                                                 size, you may
                                                 find
@@ -3109,7 +3108,7 @@
 
                                             <p class="h9">
                                                 View our recent custom-made orders <a
-                                                    href="https://www.michaeltrio.com/customisation">here</a>.
+                                                    href="{{store url='customisation'}}">here</a>.
                                             </p>
                                         </div>
                                     </div>
@@ -3325,7 +3324,7 @@
 
                                             <p class="h9">
                                                 Yes, it is. Please contact our <a
-                                                    href="https://www.michaeltrio.com/contacts">Customer Service</a>
+                                                    href="{{store url='contacts'}}">Customer Service</a>
                                                 about the
                                                 specifics of
                                                 international
@@ -3370,7 +3369,7 @@
                                                 long as it fulfills our Diamond
                                                 Price Match
                                                 criteria <a
-                                                    href="https://www.michaeltrio.com/terms-and-conditions-for-diamond-price-match-guarantee">here</a>.
+                                                    href="{{store url='terms-and-conditions-for-diamond-price-match-guarantee'}}">here</a>.
                                             </p>
 
                                         </div>
@@ -3578,7 +3577,7 @@
                                             </p>
 
                                             <p class="h9">
-                                                Please <a href="https://www.michaeltrio.com/contacts">contact us</a> if
+                                                Please <a href="{{store url='contacts'}}">contact us</a> if
                                                 you have any questions or would like
                                                 to return your
                                                 item(s) to take
@@ -3590,7 +3589,7 @@
                                             <p class="h9">
                                                 * To send us your jewellery, Singapore customers may drop it off at one
                                                 of
-                                                our <a href="https://www.michaeltrio.com/contacts">stores</a>.
+                                                our <a href="{{store url='contacts'}}">stores</a>.
                                                 International customers will be subject to return shipping costs
                                                 applicable
                                                 to their order.
@@ -3660,7 +3659,7 @@
                                                 When you shop at Michael Trio, you can be certain that your diamonds are
                                                 sourced from
                                                 reputable providers. Read more about our conflict-free diamonds <a
-                                                    href="https://www.michaeltrio.com/conflict-free-diamond">here</a>.
+                                                    href="{{store url='conflict-free-diamond'}}">here</a>.
                                             </p>
                                         </div>
                                     </div>
@@ -3691,7 +3690,7 @@
                                                 <p class="h9">
                                                     Have a friend you think would love Michael Trio’s jewellery? We’d
                                                     love to meet them too! Simply fill up and submit the google form
-                                                    <a href="https://www.michaeltrio.com/refer-a-friend">here</a>. Once
+                                                    <a href="{{store url='refer-a-friend'}}">here</a>. Once
                                                     completed, your friend will receive a promo code for $100
                                                     off their first purchase at Michael Trio.
                                                 </p>
@@ -3716,7 +3715,7 @@
                                                 </p>
                                                 <p class="h9">
                                                     For more information, you may refer to the Terms and Conditions
-                                                    <a href="https://www.michaeltrio.com/terms-condition">here</a>.
+                                                    <a href="{{store url='terms-condition'}}">here</a>.
                                                 </p>
                                             </div>
                                         </div>
