--- a/content_pages/pravicy.html
+++ b/content_pages/pravicy.html
@@ -1152,12 +1152,12 @@
 
                 <h3 class="font-weight-normal ">Privacy Policy</h3>
                 <div class="mb-5 ">
-                    <p class="h9">Thank you for visiting <a href="https://www.michaeltrio.com">www.michaeltrio.com</a>.
+                    <p class="h9">Thank you for visiting <a href="{{store url='/'}}">www.michaeltrio.com</a>.
                         We
                         respect your
                         privacy and understand your concerns on protecting the privacy of the personal information you
                         provide to us. The information below describes our privacy policies. By visiting <a
-                            href="https://www.michaeltrio.com">www.michaeltrio.com</a>, you are confirming your
+                            href="{{store url='/'}}">www.michaeltrio.com</a>, you are confirming your
                         agreement to
                         the privacy terms described in this Privacy Policy.</p>
                 </div>
@@ -1285,22 +1285,21 @@
                         </div>
                         <div class="panel-body" data-role="content">
                             <p class="h9">Welcome to our website. At <a
-                                    href="https://www.michaeltrio.com">www.michaeltrio.com</a>,
+                                    href="{{store url='/'}}">www.michaeltrio.com</a>,
                                 we always
                                 appreciate your business. If you would like to provide feedback about <a
-                                    href="https://www.michaeltrio.com">www.michaeltrio.com</a> website, or recommend a
+                                    href="{{store url='/'}}">www.michaeltrio.com</a> website, or recommend a
                                 way we
                                 can
                                 improve the buying experience, please
                                 <a href="mailto:service@michaeltrio.com"><strong>click here</strong></a>
                                 .
                             </p>
-                            <p class="h9">In addition, we offer the <a
-                                    href="https://www.michaeltrio.com">www.michaeltrio.com</a>
+                            <p class="h9">In addition, we offer the <a href="{{store url='/'}}">www.michaeltrio.com</a>
                                 Safe Purchase
                                 Guarantee to ensure your comfort when buying on a <a
-                                    href="https://www.michaeltrio.com">www.michaeltrio.com</a> website. <a
-                                    href="https://www.michaeltrio.com">www.michaeltrio.com</a> provides services to you
+                                    href="{{store url='/'}}">www.michaeltrio.com</a> website. <a
+                                    href="{{store url='/'}}">www.michaeltrio.com</a> provides services to you
                                 subject
                                 to
                                 the terms and conditions included in this Terms of Use and other customer service pages
