--- a/content_pages/t&c.html
+++ b/content_pages/t&c.html
@@ -1151,18 +1151,17 @@
             <div class="container">
                 <h3 class="font-weight-normal">Terms &amp; Condition</h3>
                 <div class="mb-5">
-                    <p class="h9">Welcome to our website. At <a href="https://www.michaeltrio.com">
+                    <p class="h9">Welcome to our website. At <a href="{{store url='/'}}">
                             www.michaeltrio.com</a>,
                         we always
                         appreciate your business. If you would like
                         to provide feedback about our website, or recommend a way we can improve the buying experience,
-                        please <a href="https://www.michaeltrio.com"><strong>click here</strong></a>. In addition, we
+                        please <a href="{{store url='/'}}"><strong>click here</strong></a>. In addition, we
                         offer
-                        the <a href="https://www.michaeltrio.com"> www.michaeltrio.com</a> Safe Purchase Guarantee to
+                        the <a href="{{store url='/'}}"> www.michaeltrio.com</a> Safe Purchase Guarantee to
                         ensure
-                        your comfort when buying on our website <a
-                            href="https://www.michaeltrio.com">www.michaeltrio.com</a>.</p>
-                    <p class="h9"><a href="https://www.michaeltrio.com">www.michaeltrio.com</a> provides services to you
+                        your comfort when buying on our website <a href="{{store url='/'}}">www.michaeltrio.com</a>.</p>
+                    <p class="h9"><a href="{{store url='/'}}">www.michaeltrio.com</a> provides services to you
                         subject to the
                         Terms and Conditions included in this
                         Terms of Use and other customer service pages which we have prepared to help make your shopping
@@ -1202,7 +1201,7 @@
                             <h5 class="font-weight-normal panel-title">Ownership and Copyright</h5>
                         </div>
                         <div class="panel-body" data-role="content">
-                            <p class="h9">This <a href="https://www.michaeltrio.com">www.michaeltrio.com</a> website is
+                            <p class="h9">This <a href="{{store url='/'}}">www.michaeltrio.com</a> website is
                                 owned
                                 and
                                 operated by
@@ -1221,8 +1220,8 @@
                             <h5 class="font-weight-normal panel-title">Trademarks</h5>
                         </div>
                         <div class="panel-body" data-role="content">
-                            <p class="h9">Michael Trio, <a href="https://www.michaeltrio.com">www.michaeltrio.com</a>,
-                                <a href="https://www.michaeltrio.com">www.michaeltrio.com</a>.sg, Michael Trio and other
+                            <p class="h9">Michael Trio, <a href="{{store url='/'}}">www.michaeltrio.com</a>,
+                                <a href="{{store url='/'}}">www.michaeltrio.com</a>.sg, Michael Trio and other
                                 marks
                                 indicated on
                                 Michael Trio’s website(s) are trademarks and/or service marks of Michael Trio. Other
@@ -1251,7 +1250,7 @@
                                 permission
                                 of
                                 Michael Trio or the trademark or service mark owner. Neither the names “<a
-                                    href="https://www.michaeltrio.com">www.michaeltrio.com</a>" or
+                                    href="{{store url='/'}}">www.michaeltrio.com</a>" or
                                 “Michael Trio” nor Michael Trio’s logos may be used for any purpose without Michael
                                 Trio’s
                                 prior
@@ -1316,7 +1315,7 @@
                                 under
                                 18
                                 years
-                                old, you may use <a href="https://www.michaeltrio.com">www.michaeltrio.com</a> only with
+                                old, you may use <a href="{{store url='/'}}">www.michaeltrio.com</a> only with
                                 the
                                 involvement of a parent or guardian. Michael Trio
                                 reserves the right to refuse service, terminate accounts, remove or edit content or
@@ -1590,7 +1589,7 @@
                                 and
                                 use
                                 of
-                                <a href="https://www.michaeltrio.com">www.michaeltrio.com</a> website(s).
+                                <a href="{{store url='/'}}">www.michaeltrio.com</a> website(s).
                             </p>
                         </div>
                     </div>
