--- a/diamond-price-match.html
+++ b/diamond-price-match.html
@@ -214,7 +214,7 @@
                         diamond that you’re comparing it to. Michael Trio reserves the right to review your request and
                         decide, in our sole discretion, whether the competitor's diamond is comparable.</li>
                     <li>Diamond price match does not qualify for <a
-                            href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds">fancy colored
+                            href="{{store url='/loose-diamonds/fancy-colour-diamonds'}}">fancy colored
                             diamonds</a>.</li>
                     <li>Diamonds from the Pure Hearts™ by Michael Trio collection are not eligible for the Diamond Price
                         Match Guarantee.</li>
