--- a/landing_pages/custom.html
+++ b/landing_pages/custom.html
@@ -770,7 +770,7 @@
                                 customisation services to help bring your idea to life. From material to style, let us
                                 know your preference and our team of designers and jewellers will do their magic. </p>
 
-                            <a href="https://www.michaeltrio.com/make-an-appointment" class="btn btn-blue large-btn "
+                            <a href="{{store url='make-an-appointment'}}" class="btn btn-blue large-btn "
                                 role="button">Schedule An Appointment</a>
 
                         </div>
@@ -903,8 +903,8 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <a href="https://www.michaeltrio.com/make-an-appointment" class="btn btn-blue large-btn "
-                        role="button">Schedule An Appointment</a>
+                    <a href="{{store url='make-an-appointment'}}" class="btn btn-blue large-btn " role="button">Schedule
+                        An Appointment</a>
                 </div>
             </div>
         </section>
