--- a/landing_pages/diamond.html
+++ b/landing_pages/diamond.html
@@ -795,9 +795,9 @@
 
 
 
-              <a href="https://www.michaeltrio.com/loose-diamonds/all-diamonds" class="btn btn-blue large-btn mb-2"
+              <a href="{{store url='loose-diamonds/all-diamonds'}}" class="btn btn-blue large-btn mb-2"
                 role="button">Earth Natural</a>
-              <a href="https://www.michaeltrio.com/loose-diamonds/lab-grown-diamonds" class="btn btn-blue large-btn"
+              <a href="{{store url='loose-diamonds/lab-grown-diamonds'}}" class="btn btn-blue large-btn"
                 role="button">Lab Grown</a>
             </div>
           </div>
@@ -838,83 +838,83 @@
           }}}}}'>
                 <div class="item ">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/round"><img
+                    <figure><a href="{{store url='loose-diamonds/round'}}"><img
                           src="{{media url=&quot;landing/images/diamond1.jpg&quot;}}" class="img-responsive"></a>
                     </figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/round" class="diamond-name">ROUND</a>
+                    <a href="{{store url='loose-diamonds/round'}}" class="diamond-name">ROUND</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/princess"><img
+                    <figure><a href="{{store url='loose-diamonds/princess'}}"><img
                           src="{{media url=&quot;landing/images/diamond2.jpg&quot;}}" class="img-responsive"></a>
                     </figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/princess" class="diamond-name">PRINCESS</a>
+                    <a href="{{store url='loose-diamonds/princess'}}" class="diamond-name">PRINCESS</a>
                   </article>
 
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/emerald"><img
+                    <figure><a href="{{store url='loose-diamonds/emerald'}}"><img
                           src="{{media url=&quot;landing/images/diamond3.jpg&quot;}}" class="img-responsive"></a>
                     </figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/emerald" class="diamond-name">EMERALD</a>
+                    <a href="{{store url='loose-diamonds/emerald'}}" class="diamond-name">EMERALD</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/heart"><img
+                    <figure><a href="{{store url='loose-diamonds/heart'}}"><img
                           src="{{media url=&quot;landing/images/diamond4.jpg&quot;}}" class="img-responsive"></a>
                     </figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/heart" class="diamond-name">HEART</a>
+                    <a href="{{store url='loose-diamonds/heart'}}" class="diamond-name">HEART</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/pear"><img
+                    <figure><a href="{{store url='loose-diamonds/pear'}}"><img
                           src="{{media url=&quot;landing/images/diamond5.jpg&quot;}}" class="img-responsive"></a>
                     </figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/pear" class="diamond-name">PEAR</a>
+                    <a href="{{store url='loose-diamonds/pear'}}" class="diamond-name">PEAR</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/asscher"><img
+                    <figure><a href="{{store url='loose-diamonds/asscher'}}"><img
                           src="{{media url=&quot;landing/images/diamond-sample-asscher.jpg&quot;}}"
                           class="img-responsive"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/asscher" class="diamond-name">ASSCHER</a>
+                    <a href="{{store url='loose-diamonds/asscher'}}" class="diamond-name">ASSCHER</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/cushion"><img
+                    <figure><a href="{{store url='loose-diamonds/cushion'}}"><img
                           src="{{media url=&quot;landing/images/diamond-sample-cushion.jpg&quot;}}"
                           class="img-responsive"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/cushion" class="diamond-name">CUSHION</a>
+                    <a href="{{store url='loose-diamonds/cushion'}}" class="diamond-name">CUSHION</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/radiant"><img
+                    <figure><a href="{{store url='loose-diamonds/radiant'}}"><img
                           src="{{media url=&quot;landing/images/diamond-sample-radient.jpg&quot;}}"
                           class="img-responsive"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/radiant" class="diamond-name">RADIANT</a>
+                    <a href="{{store url='loose-diamonds/radiant'}}" class="diamond-name">RADIANT</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/oval"><img
+                    <figure><a href="{{store url='loose-diamonds/oval'}}"><img
                           src="{{media url=&quot;landing/images/diamond-sample-oval.jpg&quot;}}"
                           class="img-responsive"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/oval" class="diamond-name">OVAL</a>
+                    <a href="{{store url='loose-diamonds/oval'}}" class="diamond-name">OVAL</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/marquise"><img
+                    <figure><a href="{{store url='loose-diamonds/marquise'}}"><img
                           src="{{media url=&quot;landing/images/diamond-sample-marquise.jpg&quot;}}"
                           class="img-responsive"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/marquise" class="diamond-name">MARQUISE</a>
+                    <a href="{{store url='loose-diamonds/marquise'}}" class="diamond-name">MARQUISE</a>
                   </article>
                 </div>
 
@@ -954,7 +954,7 @@
                 Pure Hearts<sup>TM</sup> by Michael Trio combines the best of
                 both worlds, presenting a diamond with a symmetrical
                 balance of lights and specifications.</p>
-              <a href="https://www.michaeltrio.com/pure-hearts" class="btn btn-blue large-btn " role="button">Explore
+              <a href="{{store url='pure-hearts'}}" class="btn btn-blue large-btn " role="button">Explore
                 Pure Hearts</a>
             </div>
           </div>
@@ -990,34 +990,34 @@
             }}}}}'>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds"><img
+                    <figure><a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}"><img
                           src="{{media url=&quot;0newdiamondpage/Fancy-Colour-Diamonds-YELLOW.png&quot;}}"
                           class="img-responsive" alt="Fancy-Colour-Diamonds-YELLOW.png"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds">YELLOW</a>
+                    <a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}">YELLOW</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds"><img
+                    <figure><a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}"><img
                           src="{{media url=&quot;0newdiamondpage/Fancy-Colour-Diamonds-BLUE.png&quot;}}"
                           class="img-responsive" alt="Fancy-Colour-Diamonds-BLUE.png"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds">BLUE</a>
+                    <a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}">BLUE</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds"><img
+                    <figure><a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}"><img
                           src="{{media url=&quot;0newdiamondpage/Fancy-Colour-Diamonds-PINK.png&quot;}}"
                           class="img-responsive" alt="Fancy-Colour-Diamonds-PINK.png"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds">PINK</a>
+                    <a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}">PINK</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds"><img
+                    <figure><a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}"><img
                           src="{{media url=&quot;0newdiamondpage/Fancy-Colour-Diamonds-PURPLE.png&quot;}}"
                           class="img-responsive" alt="Fancy-Colour-Diamonds-PURPLE.png"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds">PURPLE</a>
+                    <a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}">PURPLE</a>
                   </article>
                 </div>
 
@@ -1059,34 +1059,34 @@
             }}}}}'>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds"><img
+                    <figure><a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}"><img
                           src="{{media url=&quot;0newdiamondpage/Fancy-Colour-Diamonds-YELLOW.png&quot;}}"
                           class="img-responsive" alt="Fancy-Colour-Diamonds-YELLOW.png"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds">YELLOW</a>
+                    <a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}">YELLOW</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds"><img
+                    <figure><a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}"><img
                           src="{{media url=&quot;0newdiamondpage/Fancy-Colour-Diamonds-BLUE.png&quot;}}"
                           class="img-responsive" alt="Fancy-Colour-Diamonds-BLUE.png"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds">BLUE</a>
+                    <a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}">BLUE</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds"><img
+                    <figure><a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}"><img
                           src="{{media url=&quot;0newdiamondpage/Fancy-Colour-Diamonds-PINK.png&quot;}}"
                           class="img-responsive" alt="Fancy-Colour-Diamonds-PINK.png"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds">PINK</a>
+                    <a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}">PINK</a>
                   </article>
                 </div>
                 <div class="item">
                   <article class="text-center">
-                    <figure><a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds"><img
+                    <figure><a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}"><img
                           src="{{media url=&quot;0newdiamondpage/Fancy-Colour-Diamonds-PURPLE.png&quot;}}"
                           class="img-responsive" alt="Fancy-Colour-Diamonds-PURPLE.png"></a></figure>
-                    <a href="https://www.michaeltrio.com/loose-diamonds/fancy-colour-diamonds">PURPLE</a>
+                    <a href="{{store url='loose-diamonds/fancy-colour-diamonds'}}">PURPLE</a>
                   </article>
                 </div>
 
@@ -1118,11 +1118,11 @@
 
               <p class="my-4">Customise your engagement ring and choose
                 from our extensive range of ring styles, diamonds, and precious metals of your choice. </p>
-              <a href="https://www.michaeltrio.com/loose-diamonds/all-diamonds" class="btn btn-blue large-btn mb-2"
+              <a href="{{store url='loose-diamonds/all-diamonds'}}" class="btn btn-blue large-btn mb-2"
                 role="button">Start
                 with a Diamond </a>
-              <a href="https://www.michaeltrio.com/engagement-rings/setting" class="btn btn-blue large-btn "
-                role="button">Start with a Setting </a>
+              <a href="{{store url='engagement-rings/setting'}}" class="btn btn-blue large-btn " role="button">Start
+                with a Setting </a>
             </div>
           </div>
           <div class="col-sm-12 diamond-image-bg hidden-xs">
@@ -1148,7 +1148,7 @@
 
               <p class="my-4">Our Lab Grown Diamonds and Earth Natural Diamonds offer identical sparkle <span
                   class="nowrap"> and chemical compositions</span>.</p>
-              <a href="https://www.michaeltrio.com/loose-diamonds/lab-grown-diamonds" class="btn btn-blue large-btn "
+              <a href="{{store url='loose-diamonds/lab-grown-diamonds'}}" class="btn btn-blue large-btn "
                 role="button">Explore Lab Grown</a>
             </div>
           </div>
