--- a/landing_pages/gemstone.html
+++ b/landing_pages/gemstone.html
@@ -645,7 +645,7 @@
         }
 
         .gemstone-banner {
-            background-image: url(https://www.michaeltrio.com/pub/media/gemstone/gemstone-banner.jpg);
+            background-image: url(https://www.michaeltrio.com/pub/media/0gemstone/1920x400.jpg);
             background-size: cover;
             background-position: bottom center;
         }
@@ -709,12 +709,12 @@
                     <div class="col-sm-12 box ">
                         <div>
                             <h1 class="text-center mb-3">Gemstones</h1>
-                            <h3 class="text-center">Available in 360 view</h3>
+                            <h3 class="text-center">Available in 360&#176; view</h3>
                             <p class="text-center py-3">Experience the vivid colours of our Natural Gemstones right
                                 before
                                 your
                                 very eyes. Take your pick from Sapphire, Ruby and more.</p>
-                            <a href="https://www.michaeltrio.com/gemstones/ruby" class="btn btn-blue small-btn">Shop
+                            <a href="{{store url='gemstones/ruby'}}" class="btn btn-blue small-btn">Shop
                                 Gemstones</a>
                         </div>
                     </div>
@@ -889,9 +889,9 @@
                     </div>
                     <div class="col-sm-10 box hidden-xs">
                         <div>
-                            <div> <a href="https://www.michaeltrio.com/gemstones/ruby"
-                                    class="btn btn-blue large-btn mb-2">Start With A Gemstones</a></div>
-                            <div> <a href="https://www.michaeltrio.com/engagement-rings/setting/"
+                            <div> <a href="{{store url='gemstones/ruby'}}" class="btn btn-blue large-btn mb-2">Start
+                                    With A Gemstones</a></div>
+                            <div> <a href="{{store url='engagement-rings/setting/'}}"
                                     class="btn btn-blue large-btn">Start With A Setting</a></div>
                         </div>
                     </div>
@@ -901,11 +901,10 @@
 
         <div class="container pt-5 pb-3 box visible-xs">
             <div>
-                <div> <a href="https://www.michaeltrio.com/gemstones/ruby" class="btn btn-blue large-btn mb-2">Start
+                <div> <a href="{{store url='gemstones/ruby'}}" class="btn btn-blue large-btn mb-2">Start
                         With A
                         Gemstones</a></div>
-                <div> <a href="https://www.michaeltrio.com/engagement-rings/setting/"
-                        class="btn btn-blue large-btn">Start
+                <div> <a href="{{store url='engagement-rings/setting/'}}" class="btn btn-blue large-btn">Start
                         With A Setting</a></div>
             </div>
         </div>
@@ -920,7 +919,7 @@
                 <div class="row d-block">
 
                     <div class="col-sm-8 col-xs-24">
-                        <a href="https://www.michaeltrio.com/jewellery/rings/gemstone/" class="textblack">
+                        <a href="{{store url='jewellery/rings/gemstone'}}" class="textblack">
                             <div class="bg-orange mb-3">
 
                                 <div class="overflow-hidden">
@@ -934,7 +933,7 @@
                         </a>
                     </div>
                     <div class="col-sm-8 col-xs-24">
-                        <a href="https://www.michaeltrio.com/jewellery/earrings/gemstone/" class="textblack">
+                        <a href="{{store url='jewellery/earrings/gemstone/'}}" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div class="overflow-hidden">
                                     <img src="https://www.michaeltrio.com/pub/media/0gemstone/MTM2-Gemstones-jewellery-2.jpg"
@@ -947,7 +946,7 @@
                     </div>
 
                     <div class="col-sm-8 col-xs-24">
-                        <a href="https://www.michaeltrio.com/jewellery/necklaces/gemstone/" class="textblack">
+                        <a href="{{store url='jewellery/necklaces/gemstone/'}}" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div class="overflow-hidden">
                                     <img src="https://www.michaeltrio.com/pub/media/0gemstone/MTM2-Gemstones-jewellery-3.jpg"
@@ -961,7 +960,7 @@
                 </div>
 
                 <div class="text-center py-3">
-                    <a href="https://www.michaeltrio.com/gemstones/ruby/" class="btn btn-blue small-btn">Shop
+                    <a href="{{store url='gemstones/ruby/'}}" class="btn btn-blue small-btn">Shop
                         Gemstones</a>
                 </div>
             </div>
