--- a/landing_pages/location.html
+++ b/landing_pages/location.html
@@ -690,7 +690,7 @@
     <div class="mt2021">
         <section>
 
-            <h3 class="mb-5 text-center"> Our Showrooms</h3>
+            <h3 class="my-5 text-center"> Our Showrooms</h3>
             <div class="container mb-5 bg-lightblue">
                 <div class="row">
                     <div class="col-sm-12 box p-0 tanjong-bg">
@@ -716,7 +716,7 @@
                                 Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
                             <div class="py-3">
-                                <a href="https://www.michaeltrio.com/make-an-appointment?location=tp"
+                                <a href="{{store url='make-an-appointment?location=tp'}}"
                                     class="btn btn-blue large-btn">Schedule An Appointment </a>
                             </div>
 
@@ -750,7 +750,7 @@
                                 Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
                             <div class="py-3">
-                                <a href="https://www.michaeltrio.com/make-an-appointment?location=jem"
+                                <a href="{{store url='make-an-appointment?location=jem'}}"
                                     class="btn btn-blue large-btn">Schedule An Appointment </a>
                             </div>
 
@@ -788,7 +788,7 @@
                                 Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
                             <div class="py-3">
-                                <a href="https://www.michaeltrio.com/make-an-appointment?location=np"
+                                <a href="{{store url='make-an-appointment?location=np'}}"
                                     class="btn btn-blue large-btn">Schedule An Appointment </a>
                             </div>
 
