--- a/landing_pages/wedding.html
+++ b/landing_pages/wedding.html
@@ -776,8 +776,8 @@
               <h1>Wedding Bands</h1>
               <p class="my-4">A wedding band is a symbol of commitment; a promise, a pledge, and a vow.</p>
 
-              <a href="https://www.michaeltrio.com/wedding-bands/women" class="btn btn-blue large-btn "
-                role="button">Explore Wedding Bands</a>
+              <a href="{{store url='wedding-bands/women'}}" class="btn btn-blue large-btn " role="button">Explore
+                Wedding Bands</a>
 
             </div>
           </div>
@@ -815,31 +815,31 @@
               "items":5
           }
         }}}}}'>
-              <div class="item"><a href="https://www.michaeltrio.com/wedding-bands/women/classic">
+              <div class="item"><a href="{{store url='wedding-bands/women/classic'}}">
                   <img src="https://www.michaeltrio.com/pub/media/0newweddingpage/MT2-WB-W-Classic300.png"
                     class="img-responsive" alt="">
                   <div class="for-title">Classic</div>
                 </a>
               </div>
-              <div class="item"><a href="https://www.michaeltrio.com/wedding-bands/women/eternity">
+              <div class="item"><a href="{{store url='wedding-bands/women/eternity'}}">
                   <img src="https://www.michaeltrio.com/pub/media/0newweddingpage/MT2-WB-W-Eternity300.png"
                     class="img-responsive" alt="">
                   <div class="for-title">Eternity</div>
                 </a>
               </div>
-              <div class="item"><a href="https://www.michaeltrio.com/wedding-bands/women/diamond">
+              <div class="item"><a href="{{store url='wedding-bands/women/diamond'}}">
                   <img src="https://www.michaeltrio.com/pub/media/0newweddingpage/MT2-WB-W-Diamond300.png"
                     class="img-responsive" alt="">
                   <div class="for-title">Diamond</div>
                 </a>
               </div>
-              <div class="item"><a href="https://www.michaeltrio.com/wedding-bands/women/dainty">
+              <div class="item"><a href="{{store url='wedding-bands/women/dainty'}}">
                   <img src="https://www.michaeltrio.com/pub/media/0newweddingpage/MT2-WB-W-Dainty300.png"
                     class="img-responsive" alt="">
                   <div class="for-title">Dainty</div>
                 </a>
               </div>
-              <div class="item"><a href="https://www.michaeltrio.com/wedding-bands/women/alternative">
+              <div class="item"><a href="{{store url='wedding-bands/women/alternative'}}">
                   <img src="https://www.michaeltrio.com/pub/media/0newweddingpage/MT2-WB-W-Alternative300.png"
                     class="img-responsive" alt="">
                   <div class="for-title">Alternative</div>
@@ -884,20 +884,20 @@
               "items":3
           }
         }}}}}'>
-              <div class="item"><a href="https://www.michaeltrio.com/wedding-bands/men/classic">
+              <div class="item"><a href="{{store url='wedding-bands/men/classic'}}">
                   <img src="https://www.michaeltrio.com/pub/media/0newweddingpage/MT2-WB-M-Classic300.png"
                     class="img-responsive" alt="">
                   <div class="for-title">Classic</div>
                 </a>
               </div>
 
-              <div class="item"><a href="https://www.michaeltrio.com/wedding-bands/men/diamond">
+              <div class="item"><a href="{{store url='wedding-bands/men/diamond'}}">
                   <img src="https://www.michaeltrio.com/pub/media/0newweddingpage/MT2-WB-M-Diamond300.png"
                     class="img-responsive" alt="">
                   <div class="for-title">Diamond</div>
                 </a>
               </div>
-              <div class="item"><a href="https://www.michaeltrio.com/wedding-bands/men/alternative">
+              <div class="item"><a href="{{store url='wedding-bands/men/alternative'}}">
                   <img src="https://www.michaeltrio.com/pub/media/0newweddingpage/MT2-WB-M-Alternative300.png"
                     class="img-responsive" alt="">
                   <div class="for-title">Alternative</div>
@@ -928,7 +928,7 @@
 
               <p class="my-4">Design your perfect wedding band. Select from our range of wedding bands styles, customise
                 it with diamonds, the precious metal of your choice and preferred metal finishing. </p>
-              <a href="https://www.michaeltrio.com/customisation" class="btn btn-blue large-btn " role="button">Explore
+              <a href="{{store url='customisation'}}" class="btn btn-blue large-btn " role="button">Explore
                 Custom-Made</a>
             </div>
           </div>
@@ -961,70 +961,70 @@
             }
           }}}}}'>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0136b-18kw"><img
+                  <a href="{{store url='wr0136b-18kw'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/1WR0136B-18KW.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Classic Glossy Finished with Diamond Wedding Ring in 18K White Gold</div>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0042b-18kw"><img
+                  <a href="{{store url='wr0042b-18kw'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/2WR0042B-18KW.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Satin Finished with Channel Set Diamond Ring in 18K White Gold</div>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0006b-18kw"><img
+                  <a href="{{store url='wr0006b-18kw'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/3WR0006B-18KW.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Glossy Tone with Milgrain Edge with Groove Ring in 18k White Gold</div>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0135b-18kw"><img
+                  <a href="{{store url='wr0135b-18kw'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/4WR0135B-18KW.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Classic Indented with Glossy Finished Diamond Ring in 18K White Gold</div>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0129a-18kw"><img
+                  <a href="{{store url='wr0129a-18kw'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/5WR0129A-18KW.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Glossy Carved Design Ring in 18K white Gold</div>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0280a-18kw"><img
+                  <a href="{{store url='wr0280a-18kw'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/6WR0280A-18KW.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Brushed Curve Steps Diamond Ring in 18k White Gold</div>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0065a-18kw"><img
+                  <a href="{{store url='wr0065a-18kw'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/7WR0065A-18KW.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Indented Matte Inlay Ring with 18k White Gold</div>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0045a-18kw"><img
+                  <a href="{{store url='wr0045a-18kw'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/8WR0045A-18KW.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Glossy Crossovered Ring in 18k White Gold</div>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0018a-18kw"><img
+                  <a href="{{store url='wr0018a-18kw'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/9WR0018A-18KW.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Glossy Crossovered Ring in 18k White Gold</div>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="https://www.michaeltrio.com/wr0098b-18kwr"><img
+                  <a href="{{store url='wr0098b-18kwr'}}"><img
                       src="https://www.michaeltrio.com/pub/media/0newweddingpage/top10slider/10WR0098B-18KWR.jpg"
                       class="img-responsive m-auto" alt="">
                     <div class="for-title">Dual Tone Contrasted Finish with Flush Set Diamond Ring in 18K White and Rose
