--- a/header_footer/footer.html
+++ b/header_footer/footer.html
@@ -281,7 +281,7 @@
                                     <div>
                                         <p style="line-height: 1.35;
             font: 400 13px/1.35 Montserrat,Helvetica Neue,Verdana,Arial,sans-serif;
-            padding: 0;">© <a href="{{store url=""}}store-admin/login" rel="nofollow" style="color: #ffffff;">Michael
+            padding: 0;">© <a href="{{store url=''}}store-admin/login" rel="nofollow" style="color: #ffffff;">Michael
                                                 Trio
                                                 Pte Ltd 2021</a>. All Rights Reserved.
                                         <p>
@@ -566,7 +566,7 @@
                                     <div>
                                         <p style="line-height: 1.35;
         font: 400 13px/1.35 Montserrat,Helvetica Neue,Verdana,Arial,sans-serif;
-        padding: 0;">© <a href="{{store url=""}}store-admin/login" rel="nofollow" style="color: #ffffff;">Michael Trio
+        padding: 0;">© <a href="{{store url=''}}store-admin/login" rel="nofollow" style="color: #ffffff;">Michael Trio
                                                 Pte Ltd 2021</a>. All Rights Reserved.
                                         <p>
                                     </div>
