--- a/landing_pages/home.html
+++ b/landing_pages/home.html
@@ -871,10 +871,10 @@
                             <h6 class="mb-4">In 2 Easy Steps</h6>
 
                             <div>
-                                <a href="https://www.michaeltrio.com/loose-diamonds/all-diamonds/"
+                                <a href="{{store url='loose-diamonds/all-diamonds'}}"
                                     class="btn btn-blue small-btn mb-2 ">Start
                                     With A Diamond</a>
-                                <a href="https://www.michaeltrio.com/engagement-rings/setting/"
+                                <a href="{{store url='engagement-rings/setting'}}"
                                     class="btn btn-blue small-btn mb-2">Start With A Setting</a>
                             </div>
 
@@ -1008,7 +1008,7 @@
 
                 <div class="row py-5">
                     <div class="col-xs-12">
-                        <a href="https://www.michaeltrio.com/wedding-bands/men/" class="textblack">
+                        <a href="{{store url='wedding-bands/men'}}" class="textblack">
                             <div class="bg-orange">
                                 <div>
                                     <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/male-wedding-band.jpg"
@@ -1021,7 +1021,7 @@
                     </div>
 
                     <div class="col-xs-12">
-                        <a href="https://www.michaeltrio.com/wedding-bands/women/" class="textblack">
+                        <a href="{{store url='wedding-bands/women'}}" class="textblack">
                             <div class="bg-orange">
                                 <div>
                                     <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/female-wedding-band.jpg"
@@ -1058,9 +1058,9 @@
                             <p class="py-3 text-center">Explore our diamonds in 360° HD. Inspect them with up to 40x
                                 magnification and review the 4Cs together with the grading certification. </p>
                             <a class="btn btn-blue small-btn mb-3"
-                                href="https://www.michaeltrio.com/loose-diamonds/all-diamonds">Earth Natural </a>
+                                href="{{store url='loose-diamonds/all-diamonds'}}">Earth Natural </a>
                             <a class="btn btn-blue small-btn "
-                                href="https://www.michaeltrio.com/loose-diamonds/lab-grown-diamonds">Lab Created </a>
+                                href="{{store url='loose-diamonds/lab-grown-diamonds'}}">Lab Created </a>
 
                         </div>
                     </div>
@@ -1091,7 +1091,7 @@
                               }
                             }}}}}'>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/round">
+                                    <a href="{{store url='loose-diamonds/round'}}">
                                         <article class="text-center">
                                             <figure>
                                                 <img src="{{media url=&quot;landing/images/diamond1.jpg&quot;}}"
@@ -1103,7 +1103,7 @@
                                     </a>
                                 </div>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/princess"></a>
+                                    <a href="{{store url='loose-diamonds/princess'}}"></a>
                                     <article class="text-center">
                                         <figure>
                                             <img src="{{media url=&quot;landing/images/diamond2.jpg&quot;}}"
@@ -1114,7 +1114,7 @@
                                     </a>
                                 </div>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/emerald">
+                                    <a href="{{store url='loose-diamonds/emerald'}}">
                                         <article class="text-center">
                                             <figure>
                                                 <img src="{{media url=&quot;landing/images/diamond3.jpg&quot;}}"
@@ -1125,7 +1125,7 @@
                                     </a>
                                 </div>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/heart">
+                                    <a href="{{store url='loose-diamonds/heart'}}">
                                         <article class="text-center">
                                             <figure>
                                                 <img src="{{media url=&quot;landing/images/diamond4.jpg&quot;}}"
@@ -1136,7 +1136,7 @@
                                     </a>
                                 </div>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/pear">
+                                    <a href="{{store url='loose-diamonds/pear'}}">
                                         <article class="text-center">
                                             <figure>
                                                 <img src="{{media url=&quot;landing/images/diamond5.jpg&quot;}}"
@@ -1148,7 +1148,7 @@
                                     </a>
                                 </div>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/asscher">
+                                    <a href="{{store url='loose-diamonds/asscher'}}">
                                         <article class="text-center">
                                             <figure>
                                                 <img src="{{media url=&quot;landing/images/diamond-sample-asscher.jpg&quot;}}"
@@ -1159,7 +1159,7 @@
                                     </a>
                                 </div>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/cushion">
+                                    <a href="{{store url='loose-diamonds/cushion'}}">
                                         <article class="text-center">
                                             <figure>
                                                 <img src="{{media url=&quot;landing/images/diamond-sample-cushion.jpg&quot;}}"
@@ -1170,7 +1170,7 @@
                                     </a>
                                 </div>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/radiant">
+                                    <a href="{{store url='loose-diamonds/radiant'}}">
                                         <article class="text-center">
                                             <figure>
                                                 <img src="{{media url=&quot;landing/images/diamond-sample-radient.jpg&quot;}}"
@@ -1182,7 +1182,7 @@
                                     </a>
                                 </div>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/oval">
+                                    <a href="{{store url='loose-diamonds/oval'}}">
                                         <article class="text-center">
                                             <figure>
                                                 <img src="{{media url=&quot;landing/images/diamond-sample-oval.jpg&quot;}}"
@@ -1193,7 +1193,7 @@
                                     </a>
                                 </div>
                                 <div class="item">
-                                    <a href="https://www.michaeltrio.com/loose-diamonds/marquise">
+                                    <a href="{{store url='loose-diamonds/marquise'}}">
                                         <article class="text-center">
                                             <figure>
                                                 <img src="{{media url=&quot;landing/images/diamond-sample-marquise.jpg&quot;}}"
@@ -1227,8 +1227,7 @@
                                     Every story is unique. Celebrate your love story with a custom engagement ring,
                                     tailor-made to suit the person you love.
                                 </p>
-                                <a href="https://www.michaeltrio.com/customisation"
-                                    class="btn btn-blue small-btn">Explore Now </a>
+                                <a href="{{store url='customisation'}}" class="btn btn-blue small-btn">Explore Now </a>
                             </div>
                         </div>
 
@@ -1248,7 +1247,7 @@
                 <div class="row ">
 
                     <div class="col-sm-8 col-xs-12">
-                        <a href="https://www.michaeltrio.com/jewellery/rings" class="textblack">
+                        <a href="{{store url='jewellery/rings'}}" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
                                     <img src="https://www.michaeltrio.com/pub/media/0home/home-ring.jpg" alt=""
@@ -1260,7 +1259,7 @@
                         </a>
                     </div>
                     <div class="col-sm-8 col-xs-12">
-                        <a href="https://www.michaeltrio.com/jewellery/earrings" class="textblack">
+                        <a href="{{store url='jewellery/earrings'}}" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
                                     <img src="https://www.michaeltrio.com/pub/media/0home/home-earrings.jpg" alt=""
@@ -1272,7 +1271,7 @@
                         </a>
                     </div>
                     <div class="col-sm-8 col-xs-12">
-                        <a href="https://www.michaeltrio.com/jewellery/necklaces" class="textblack">
+                        <a href="{{store url='jewellery/necklaces'}}" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
                                     <img src="https://www.michaeltrio.com/pub/media/0home/home-necklace.jpg" alt=""
@@ -1285,7 +1284,7 @@
                     </div>
 
                     <div class="col-sm-8 col-xs-12">
-                        <a href="https://www.michaeltrio.com/jewellery/bracelets" class="textblack">
+                        <a href="{{store url='jewellery/bracelets'}}" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
                                     <img src="https://www.michaeltrio.com/pub/media/0home/home-bracelet.jpg" alt=""
@@ -1355,7 +1354,7 @@
                             <p class="mb-3">
                                 Call: <a href="tel:+6562990110">+65 62990110</a>
                             </p>
-                            <a href="https://www.michaeltrio.com/make-an-appointment?location=tp"
+                            <a href="{{store url='make-an-appointment?location=tp'}}"
                                 class="btn btn-blue small-btn">Book
                                 Now</a>
                         </div>
@@ -1386,7 +1385,7 @@
                             <p class="mb-3">
                                 Call: <a href="tel:+6569513296">+65 6951 3296</a>
                             </p>
-                            <a href="https://www.michaeltrio.com/make-an-appointment?location=jem"
+                            <a href="{{store url='make-an-appointment?location=jem'}}"
                                 class="btn btn-blue small-btn">Book
                                 Now</a>
                         </div>
@@ -1419,7 +1418,7 @@
                             <p class="mb-3">
                                 Call: <a href="tel:+6569691492">+65 6969 1492</a>
                             </p>
-                            <a href="https://www.michaeltrio.com/make-an-appointment?location=np"
+                            <a href="{{store url='make-an-appointment?location=np'}}"
                                 class="btn btn-blue small-btn">Book
                                 Now</a>
                         </div>
