--- a/landing_pages/jewel.html
+++ b/landing_pages/jewel.html
@@ -715,8 +715,8 @@
                             <p class="text-center py-3">Covetable jewellery pieces hand-crafted
                                 for any occasion. Explore our extensive
                                 collection of everyday jewellery.</p>
-                            <a href="https://www.michaeltrio.com/jewellery/all-jewels"
-                                class="btn btn-blue small-btn">Explore Jewellery</a>
+                            <a href="{{store url='jewellery/all-jewels'}}" class="btn btn-blue small-btn">Explore
+                                Jewellery</a>
                         </div>
                     </div>
                 </div>
@@ -728,7 +728,7 @@
                 <div class="max-width-600 position-relative">
 
                     <div class="text-center">
-                        <a href="https://www.michaeltrio.com/jewellery/rings">
+                        <a href="{{store url='jewellery/rings'}}">
                             <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery_-_1-4Rings_-_700x700.png"
                                 alt="" class="w-80 visible-xs m-auto">
                         </a>
@@ -739,7 +739,7 @@
                         ring to complement every look.</p>
 
                     <div class="text-center">
-                        <a href="https://www.michaeltrio.com/jewellery/rings">
+                        <a href="{{store url='jewellery/rings'}}">
                             <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery_-_1-4Rings_-_700x700.png"
                                 alt="" class="w-80 hidden-xs">
                         </a>
@@ -751,7 +751,7 @@
             <div class="w-sm-50 bg-blue-img box pb-5 overflow-hidden">
                 <div class="max-width-600 ">
                     <div class="text-center">
-                        <a href="https://www.michaeltrio.com/jewellery/necklaces">
+                        <a href="{{store url='jewellery/necklaces'}}">
                             <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery_-_2-4Nacklaces_-_700x700.png"
                                 alt="" class="w-80  m-auto">
                         </a>
@@ -760,7 +760,7 @@
                     <p class="text-center py-3 px-3">Stunning hand-crafted necklaces from
                         everyday essentials to statement pieces. </p>
                     <div class="text-center">
-                        <a href="https://www.michaeltrio.com/jewellery/necklaces">
+                        <a href="{{store url='jewellery/necklaces'}}">
                             <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery_-_2-4Nacklaces_-_700x700.png"
                                 alt="" class="w-80 hidden">
                         </a>
@@ -774,7 +774,7 @@
             <div class="w-sm-50 bg-orange-img text-center pb-xs-5 visible-xs overflow-hidden">
                 <div class="max-width-600 m-auto">
                     <div class="text-center ">
-                        <a href="https://www.michaeltrio.com/jewellery/bracelets">
+                        <a href="{{store url='jewellery/bracelets'}}">
                             <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery2_-_4-4Nacklaces2_-_700x400.png"
                                 alt="" class="w-100  m-auto">
                         </a>
@@ -786,7 +786,7 @@
             <div class="w-sm-50 bg-blue-img box overflow-hidden">
                 <div class="max-width-600 py-5">
                     <div class="text-center pb-xs-5">
-                        <a href="https://www.michaeltrio.com/jewellery/earrings">
+                        <a href="{{store url='jewellery/earrings'}}">
                             <img src="https://www.michaeltrio.com/pub/media/0jewel/jewellery-3.png" alt=""
                                 class="w-80 visible-xs m-auto">
                         </a>
@@ -796,7 +796,7 @@
                         our exquisite hand-crafted earrings are a
                         must-have fashion accessory. </p>
                     <div class="text-center">
-                        <a href="https://www.michaeltrio.com/jewellery/earrings">
+                        <a href="{{store url='jewellery/earrings'}}">
 
                             <img src="https://www.michaeltrio.com/pub/media/0jewel/jewellery-3.png" alt=""
                                 class="w-80 hidden-xs">
@@ -808,7 +808,7 @@
             <div class="w-sm-50 bg-orange-img text-center pb-xs-5 hidden-xs overflow-hidden">
                 <div class="max-width-600 m-auto">
                     <div class="text-center ">
-                        <a href="https://www.michaeltrio.com/jewellery/bracelets">
+                        <a href="{{store url='jewellery/bracelets'}}">
                             <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery2_-_4-4Nacklaces2_-_700x400.png"
                                 alt="" class="w-100  m-auto">
                         </a>
@@ -830,8 +830,8 @@
                             <h1 class="text-center ">Gifts</h1>
                             <p class="text-center py-3">Shop our dainty jewellery pieces that make the perfect
                                 personalised gift for any special occasion. </p>
-                            <a href="https://www.michaeltrio.com/jewellery/all-jewels"
-                                class="btn btn-blue small-btn">Explore Gifts</a>
+                            <a href="{{store url='jewellery/all-jewels'}}" class="btn btn-blue small-btn">Explore
+                                Gifts</a>
                         </div>
                     </div>
                 </div>
@@ -841,14 +841,14 @@
         <section class="py-5">
             <div class="container">
                 <h1 class="text-center ">Dainty Ring Gifts</h1>
-                <a href="https://www.michaeltrio.com/jewellery/rings/dainty">
+                <a href="{{store url='jewellery/rings/dainty'}}">
                     <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery4_-_Dainty_Ring_Gits.jpg"
                         alt="" class="w-100 visible-xs py-3"></a>
 
                 <div class="row py-4 px-5 hidden-xs">
                     <div class="col-sm-8">
                         <div class="bg-cream px-3 overflow-hidden">
-                            <a href="https://www.michaeltrio.com/jewellery/rings/dainty">
+                            <a href="{{store url='jewellery/rings/dainty'}}">
                                 <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery4_-_-1.png" alt=""
                                     class="w-100">
                             </a>
@@ -856,7 +856,7 @@
                     </div>
                     <div class="col-sm-8">
                         <div class="bg-cream px-3 overflow-hidden">
-                            <a href="https://www.michaeltrio.com/jewellery/rings/dainty">
+                            <a href="{{store url='jewellery/rings/dainty'}}">
                                 <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery4_-_2.png" alt=""
                                     class="w-100">
                             </a>
@@ -864,7 +864,7 @@
                     </div>
                     <div class="col-sm-8">
                         <div class="bg-cream px-3 overflow-hidden">
-                            <a href="https://www.michaeltrio.com/jewellery/rings/dainty">
+                            <a href="{{store url='jewellery/rings/dainty'}}">
                                 <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery4_-_3.png" alt=""
                                     class="w-100">
                             </a>
@@ -884,14 +884,14 @@
 
             <div class="container">
                 <h1 class="text-center ">Love Imprint Engravable Gifts</h1>
-                <a href="https://www.michaeltrio.com/jewellery/all-jewels/engravable">
+                <a href="{{store url='jewellery/all-jewels/engravable'}}">
                     <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery5_-_Love_Imprint_Engravable.jpg"
                         alt="" class="w-100 visible-xs py-3"></a>
 
                 <div class="row py-4 px-5 hidden-xs">
                     <div class="col-sm-8">
                         <div class="bg-cream px-3 pb-3 overflow-hidden">
-                            <a href="https://www.michaeltrio.com/jewellery/all-jewels/engravable">
+                            <a href="{{store url='jewellery/all-jewels/engravable'}}">
                                 <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery5-4.png" alt=""
                                     class="w-100">
                             </a>
@@ -899,7 +899,7 @@
                     </div>
                     <div class="col-sm-8">
                         <div class="bg-cream px-3 pb-3 overflow-hidden">
-                            <a href="https://www.michaeltrio.com/jewellery/all-jewels/engravable">
+                            <a href="{{store url='jewellery/all-jewels/engravable'}}">
                                 <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery5-5.png" alt=""
                                     class="w-100">
                             </a>
@@ -907,7 +907,7 @@
                     </div>
                     <div class="col-sm-8">
                         <div class="bg-cream px-3 pb-3 overflow-hidden">
-                            <a href="https://www.michaeltrio.com/jewellery/all-jewels/engravable">
+                            <a href="{{store url='jewellery/all-jewels/engravable'}}">
                                 <img src="https://www.michaeltrio.com/pub/media/0jewel/MT2_-_Jewellery5-6.png" alt=""
                                     class="w-100">
                             </a>
